    * fileinfo: no longer inventorize missing files(reported by windows agent)
    * cluster hosts: removed agent version output from Check_MK service (this
      was misleading for different agent versions on multiple nodes)
    * job check: better handling of unexpected agent output
    * lnx_thermal: Added check for linux thermal sensors (e.g. acpi)
    * hwg_temp: Make WATO-Rule "Room Temperature" match, add man page, graph 
                and Perf-O-Meter

    Multisite:
    * User accounts can now be locked after a specified amount of auth
      failures (lock_on_logon_failures can be set to a number of tries)
    * FIX: better error message in case of exception in SNMP handling
    * Column Perf-O-Meter is now sortable: it sorts after the *first*
      performance value. This might not always be the one you like, but
      its far better than nothing.
    * logwatch: Logwatch icon no longer uses notes_url
    * check_mk-if.pnp: fixed bug with pnp template on esx hosts without perfdata
    * Fix: Inventory screen: Now shows custom checks
    * Inventory screen: Host inventory also displays its clustered services
    * Rules: Renamed "Ignored services" to "Disabled services"
             Renamed "Ignored checks" to "Disabled checks"

    WATO:
    * Allow to configure check-/retry_interval in second precision

    Notifications:
    * Flexible Notification can now filter service levels
    * FIX: check_tcp corrected order of parameters in definition

    Event Console:
    * New global setting "force message archiving", converts the EC into
      a kind of syslog archive
    * FIX: fix layout of filter for history action type
    * FIX: better detect non-IP-number hosts in hostname translation

1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins
    * New variable host_check_commands, that allows the definition of