@@ -7,6 +7,10 @@ description:
  This check does exactly the same as {ps}, but in addition
  outputs performance data. Please refer to the manpage of {ps} for more details.
 
+ Note: If you want to use {ps.perf} on Windows systems then you need to install
+ the plugin {psperf.bat} into the {plugins} directory of you Windows agent.
+ Do not use {wmicchecks.bat}. This is obsolete.
+
 perfdata:
  In all cases the number of matching running processes found on the target
  system is sent. If the agent supports it, also the virtual prozess size (VSZ)
