@@ -415,6 +415,17 @@ def perfometer_cpu_utilization(row, check_command, perf_data):
 perfometers["check_mk-h3c_lanswitch_cpu"] = perfometer_cpu_utilization
 perfometers["check_mk-winperf_processor.util"] = perfometer_cpu_utilization
 
+def perfometer_ps_perf(row, check_command, perf_data):
+    perf_dict = dict([(p[0], float(p[1])) for p in perf_data])
+    try:
+        perc = perf_dict["pcpu"]
+        return "%.1f%%" % perc, perfometer_linear(perc, "#30ff80")
+    except:
+        return "", ""
+
+perfometers["check_mk-ps.perf"] = perfometer_ps_perf
+
+
 def perfometer_hpux_snmp_cs_cpu(row, check_command, perf_data):
     h = '<table><tr>'
     h += perfometer_td(float(perf_data[0][1]), "#60f020")
