@@ -30,8 +30,10 @@
       was misleading for different agent versions on multiple nodes)
     * job check: better handling of unexpected agent output
     * lnx_thermal: Added check for linux thermal sensors (e.g. acpi)
-    * hwg_temp: Make WATO-Rule "Room Temperature" match, add man page, graph 
+    * hwg_temp: Make WATO-Rule "Room Temperature" match, add man page, graph
                 and Perf-O-Meter
+    * ps.perf: Support Windows with new plugin "psperf.bat". wmicchecks.bat
+               is obsolete now.
 
     Multisite:
     * User accounts can now be locked after a specified amount of auth
